# SIWY-25Z

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  design_proposal.md  pyproject.toml
models/: ModelsFactory.py
notebooks/: .gitignore  001-TRAK.ipynb  002-tracin.ipynb  003-dualDA.ipynb  tracin.py
notebooks/src/explainers/: __init__.py
notebooks/src/utils/: __init__.py
references/: index.md
scripts/: download_datasets.sh
siwy/: ModelsFactory.py  __init__.py  common.py  config.py  dataset.py  features.py  plots.py
siwy/datasets/: AirplaneDataset.py  CatDogConfig.py  common.py  transform_and_upload_dataset.py  use_dataset.py  wrapper.py
siwy/modeling/: predict.py  run_dualda.py  run_tracin.py  run_trak.py  test.py  tracin.py  train.py  train_resnet18.py  train_tracin.py  train_trak.py  wrapper.py
tests/: test_data.py
