[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "siwy"
version = "0.0.1"
description = "Project for Explainable Artificial Intelligence course at WUT"
authors = [
  { name = "Jarczewski Marcin, Jasiński Bartosz,Rożej Kajetan" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "prettytable>=3.17.0",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm",
    "tracin-pytorch",
    "traker[fast]>=0.3.2",
    "typer",
    "wandb>=0.23.1",
]
requires-python = "~=3.11.0"

[project.optional-dependencies]
cuda = [
    "traker[fast]>=0.3.2",
]


[tool.ruff]
line-length = 120
src = ["siwy", "notebooks", "models"]
include = ["pyproject.toml", "siwy/**/*.py", "notebooks/**/*.ipynb", "models/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["siwy"]
force-sort-within-sections = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
tracin-pytorch = { git = "https://github.com/Percival33/TracIn-PyTorch.git", rev = "dbe9e4bb" }

[tool.uv.extra-build-dependencies]
fast-jl = ["torch"]
